--- a/estilo.scss
+++ b/estilo.scss
@@ -12,20 +12,28 @@ $colorletra1: rgb(208, 208, 208);
 //mapa
 $tamañodefuente: (
     "small": 16px,
+    "ms": 20px,
     "medium": 24px,
-    "large": 32px
-);
+    "ml": 28px,
+    "large": 32px);
+
 
 body {
     margin: 0px 0px 0px 0px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: $colorletra1;
-    background: #000000;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, dimgrey, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, dimgrey, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #000000;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, rgb(153, 153, 153), #000000);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, rgb(153, 153, 153), #000000);
+
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     main {
-        border-top: solid 5px rgb(113, 0, 117);  
-        }
+        border-top: solid 8px rgb(113, 0, 117);
+    }
+
     header {
         width: 100%;
         height: 150px;
@@ -33,11 +41,13 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: center;
+
         div {
             height: 100%;
             width: 100%;
             display: flex;
             justify-content: center;
+
             img {
                 height: 150px;
                 width: 100%;
@@ -46,22 +56,221 @@ body {
         }
     }
 }
-#navegacion{
+
+#navegacion {
     color: $colorletra1;
+
+    &:hover {
+        color: #696969;
+
+    }
 }
+
 .navbar {
     background-color: black;
+    font-size: map-get($map: $tamañodefuente, $key: ms);
+}
+
+#boton {
+    border-color: rgb(114, 114, 114);
 }
 
 .collapse {
     justify-content: center;
 }
-h1 {
-    text-align: center;
-    font-size: map-get($map: $tamañodefuente, $key: "medium");
-    margin-top: 10px;
-    margin-bottom: 5px;
+
+@font-face {
+    font-family: Clip;
+    src: url("https://acupoftee.github.io/fonts/Clip.ttf");
 }
+
+.sign {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Clip";
+    text-transform: uppercase;
+    font-size: 30px;
+    color: #ffe6ff;
+    text-shadow: 0 0 0.6rem #f3f3f3, 0 0 1.5rem #dadada,
+        -0.2rem 0.1rem 1rem #c6c6c6, 0.2rem 0.1rem 1rem #c6c6c6,
+        0 -0.5rem 2rem #454545, 0 0.5rem 3rem #454545;
+    animation: shine 2s forwards, flicker 3s infinite;
+}
+
+@keyframes blink {
+
+    0%,
+    22%,
+    36%,
+    75% {
+        color: #ffe6ff;
+        text-shadow: 0 0 0.6rem #f3f3f3, 0 0 1.5rem #dadada,
+            -0.2rem 0.1rem 1rem #c6c6c6, 0.2rem 0.1rem 1rem #c6c6c6,
+            0 -0.5rem 2rem #454545, 0 0.5rem 3rem #454545;
+    }
+
+    28%,
+    33% {
+        color: #383737;
+        text-shadow: none;
+    }
+
+    82%,
+    97% {
+        color: #3a3a3a;
+        text-shadow: none;
+    }
+}
+
+.flicker {
+    animation: shine 2s forwards, blink 3s 2s infinite;
+}
+
+.fast-flicker {
+    animation: shine 2s forwards, blink 10s 1s infinite;
+}
+
+@keyframes shine {
+    0% {
+        color: #c8c8c8;
+        text-shadow: none;
+    }
+
+    100% {
+        color: #ffe6ff;
+        text-shadow: 0 0 0.6rem #f3f3f3, 0 0 1.5rem #dadada,
+            -0.2rem 0.1rem 1rem #c6c6c6, 0.2rem 0.1rem 1rem #c6c6c6,
+            0 -0.5rem 2rem #454545, 0 0.5rem 3rem #454545;
+    }
+}
+
+@keyframes flicker {
+    from {
+        opacity: 1;
+    }
+
+    4% {
+        opacity: 0.9;
+    }
+
+    6% {
+        opacity: 0.85;
+    }
+
+    8% {
+        opacity: 0.95;
+    }
+
+    10% {
+        opacity: 0.9;
+    }
+
+    11% {
+        opacity: 0.922;
+    }
+
+    12% {
+        opacity: 0.9;
+    }
+
+    14% {
+        opacity: 0.95;
+    }
+
+    16% {
+        opacity: 0.98;
+    }
+
+    17% {
+        opacity: 0.9;
+    }
+
+    19% {
+        opacity: 0.93;
+    }
+
+    20% {
+        opacity: 0.99;
+    }
+
+    24% {
+        opacity: 1;
+    }
+
+    26% {
+        opacity: 0.94;
+    }
+
+    28% {
+        opacity: 0.98;
+    }
+
+    37% {
+        opacity: 0.93;
+    }
+
+    38% {
+        opacity: 0.5;
+    }
+
+    39% {
+        opacity: 0.96;
+    }
+
+    42% {
+        opacity: 1;
+    }
+
+    44% {
+        opacity: 0.97;
+    }
+
+    46% {
+        opacity: 0.94;
+    }
+
+    56% {
+        opacity: 0.9;
+    }
+
+    58% {
+        opacity: 0.9;
+    }
+
+    60% {
+        opacity: 0.99;
+    }
+
+    68% {
+        opacity: 1;
+    }
+
+    70% {
+        opacity: 0.9;
+    }
+
+    72% {
+        opacity: 0.95;
+    }
+
+    93% {
+        opacity: 0.93;
+    }
+
+    95% {
+        opacity: 0.95;
+    }
+
+    97% {
+        opacity: 0.93;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
 /*------------------footer--------------*/
 #whatsapp {
     position: fixed;
@@ -77,9 +286,11 @@ h1 {
     justify-content: center;
     align-items: center;
     transition: all 0.5s;
+
     i {
         color: white;
     }
+
     &:hover {
         transform: scale(1.2);
         transition: all 0.5s;
@@ -95,31 +306,44 @@ footer {
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
+
+    h3 {
+        font-size: map-get($map: $tamañodefuente, $key: small);
+        padding-top: 10px;
+        color: #000000;
+        text-decoration: underline;
+    }
+
     .redes {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+
         i {
             font-size: 35px;
             color: rgb(0, 0, 0);
-            &:hover {
-                color: white;
-            }
         }
     }
+
+    .mapa {
+        padding-bottom: 10px;
+    }
 }
+
 .derechos {
     text-align: center;
     background-color: dimgrey;
-    font-size: map-get($map: $tamañodefuente, $key: "small" );
+    font-size: map-get($map: $tamañodefuente, $key: "small");
     font-style: italic;
+    padding-bottom: 0;
 }
+
 /*-----------index------------*/
 
 .carousel-item {
     height: 300px;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .d-block {
@@ -136,15 +360,15 @@ footer {
 .tituloIndex {
     text-align: center;
     text-transform: uppercase;
-    font-size: map-get($map: $tamañodefuente, $key: "medium" );
+    font-size: map-get($map: $tamañodefuente, $key: "medium");
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 10px 5px 5px 5px;
     padding-top: 10px;
     overflow-wrap: break-word;
-    text-shadow: 2px 2px rgb(126, 126, 126);
+    text-shadow: 2px 2px rgb(17, 17, 17);
 }
 
-.inicio{
+.inicio {
     height: auto;
     width: 100%;
     font-style: italic;
@@ -157,13 +381,7 @@ footer {
 }
 
 .tituloMarcas {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: map-get($map: $tamañodefuente, $key: "medium" );
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 5px 5px 5px 5px;
-    overflow-wrap: break-word;
-    text-shadow: 2px 2px rgb(126, 126, 126);
+    @extend .tituloIndex;
 }
 
 .marcas {
@@ -172,8 +390,12 @@ footer {
     width: 100%;
     grid-template-columns: 1fr 1fr;
     gap: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+
     .imgMarcas {
         justify-self: center;
+
         img {
             height: 200px;
             width: 100%;
@@ -185,9 +407,10 @@ footer {
 .contenedorReseñas {
     height: 250px;
     width: 100%;
+
     .reseñas {
         height: 220px;
-        width: 80%;
+        width: 90%;
         margin-left: auto;
         margin-right: auto;
         margin-top: 10px;
@@ -195,12 +418,15 @@ footer {
         justify-content: center;
         background-color: rgb(210, 214, 213);
         border-radius: 15px 15px 15px 15px;
+
         .tituloReseñas {
+            padding-top: 5px;
             text-align: center;
             text-transform: uppercase;
-            font-size: map-get($map: $tamañodefuente, $key: "medium" );
+            font-size: map-get($map: $tamañodefuente, $key: "medium");
             color: black;
         }
+
         .textoreseñas {
             width: 100%;
             text-align: center;
@@ -211,6 +437,7 @@ footer {
         }
     }
 }
+
 /*-------------TRABAJOS-----------*/
 
 .galeria {
@@ -218,32 +445,39 @@ footer {
     width: 100%;
     display: grid;
     grid-template-columns: 100%;
+
     .trabajos {
         height: 350px;
         width: 100%;
         object-fit: cover;
+        box-shadow: 5px black;
         margin-bottom: 10px;
         border: solid 2px black;
         transition: all 0.5s;
+
         &:hover {
             transform: scale(1.1);
             transition: 0.5s;
         }
     }
 }
+
 /*--------------NOSOTROS-----------*/
 .nosotros1 {
     display: grid;
     grid-template-columns: 100%;
+
     .imgnosotros {
         grid-column: 1/2;
         grid-row: 1/2;
+
         img {
             height: 300px;
             width: 100%;
             object-fit: contain;
         }
     }
+
     .contenido {
         grid-column: 1/2;
         grid-row: 2/3;
@@ -252,7 +486,7 @@ footer {
 }
 
 .instalaciones {
-    text-align: center;
+    @extend .tituloIndex;
 }
 
 .galeriainstalaciones {
@@ -261,46 +495,59 @@ footer {
     gap: 10px;
     margin: 30px 0px 30px 0px;
     height: 100%;
+
     .inst1 {
         grid-column: 1/2;
         grid-row: 1/2;
     }
+
     .inst2 {
         grid-column: 1/2;
         grid-row: 2/3;
     }
+
     .inst3 {
         grid-column: 1/2;
         grid-row: 3/4;
     }
+
     .inst4 {
         grid-column: 1/2;
         grid-row: 4/5;
     }
+
     img {
         height: 300px;
         width: 100%;
         object-fit: cover;
     }
 }
+
 /*-------------SERVICIOS-----------*/
 
 .servicios {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 10px;
+    gap: 5px;
+
     .imgservicios {
         height: 300px;
         width: 100%;
         object-fit: contain;
     }
+
     .textoserv {
         margin-left: 10px;
         margin-right: 10px;
-        font-size: 18px;
+        font-size: map-get($map: $tamañodefuente, $key: small);
         text-align: center;
+        h2{
+            @extend .tituloIndex;
+            padding-top: 0;
     }
 }
+}
+
 /*-------------CONTACTO------------*/
 form {
     display: grid;
@@ -316,32 +563,37 @@ form {
     margin-bottom: 10px;
     justify-items: center;
     align-items: center;
+
     input {
         height: 40px;
         width: 95%;
         margin-top: 5px;
         margin-bottom: 5px;
-        font-size: map-get($map: $tamañodefuente, $key: "small" );
+        font-size: map-get($map: $tamañodefuente, $key: "small");
         font-family: 'Times New Roman', Times, serif;
+
         .enviar {
             padding-left: 30px;
             padding-right: 30px;
         }
     }
+
     textarea {
         resize: none;
         width: 95%;
         height: 90%;
         margin-top: 5px;
-        font-size: map-get($map: $tamañodefuente, $key: "small" );
+        font-size: map-get($map: $tamañodefuente, $key: "small");
         font-family: 'Times New Roman', Times, serif;
     }
 }
+
 /*---------------MEDIA-------------*/
 
 @media only screen and (min-width: $tablet) {
+
     /*--------index----------------*/
-    #carouselExampleIndicators{ 
+    #carouselExampleIndicators {
         height: auto;
         width: 60%;
         margin-left: auto;
@@ -352,6 +604,7 @@ form {
         height: auto;
         padding-left: 5px;
         padding-right: 5px;
+
         .d-block {
             height: 400px;
             width: 100%;
@@ -373,6 +626,7 @@ form {
 
     .marcas {
         grid-template-columns: 1fr 1fr 1fr;
+
         .imgMarcas {
             justify-self: center;
         }
@@ -382,6 +636,7 @@ form {
         margin-left: auto;
         margin-right: auto;
         width: 500px;
+
         .textoreseñas {
             height: auto;
             width: auto;
@@ -393,14 +648,16 @@ form {
     }
 
     /*------------galeria----------*/
-    .margenTablet{
+    .margenTablet {
         margin-left: 25px;
         margin-right: 25px;
     }
+
     .imagenes {
         .galeria {
             grid-template-columns: 1fr 1fr;
             column-gap: 10px;
+
             .trabajos {
                 height: 350px;
                 width: 100%;
@@ -420,9 +677,11 @@ form {
     .nosotros1 {
         @extend .margenTablet;
         grid-template-columns: 1fr 1fr;
+
         .imgnosotros {
             @include grid (1, 2, 1, 2);
         }
+
         .contenido {
             @include grid (2, 3, 1, 2);
         }
@@ -432,15 +691,19 @@ form {
         @extend .margenTablet;
         grid-template-columns: 1fr 1fr;
         gap: 10px;
+
         .inst1 {
             @include grid (1, 2, 1, 2);
         }
+
         .inst2 {
             @include grid (2, 3, 1, 2);
         }
+
         .inst3 {
             @include grid (1, 2, 2, 3);
         }
+
         .inst4 {
             @include grid (2, 3, 2, 3);
         }
@@ -466,25 +729,32 @@ form {
         margin-bottom: 20px;
         justify-items: center;
         align-items: center;
+
         .nombre {
             @include grid (1, 2, 1, 2);
         }
+
         .apellido {
             @include grid (2, 3, 1, 2);
         }
+
         .mail {
             @include grid (1, 2, 2, 3);
         }
+
         .telefono {
             @include grid (2, 3, 2, 3);
         }
+
         .mensaje {
             @include grid (1, 3, 3, 4);
         }
+
         .enviar {
             @include grid (1, 3, 4, 5);
             width: 30%;
         }
+
         textarea {
             resize: none;
             width: 95%;
@@ -493,14 +763,16 @@ form {
             font-size: 16px;
             font-family: 'Times New Roman', Times, serif;
         }
+
         input {
             height: 40px;
             width: 90%;
             font-size: 16px;
             font-family: 'Times New Roman', Times, serif;
         }
-    }    
+    }
 }
+
 @media only screen and (min-width: $desktop) {
     @mixin grid ($inicioColumna, $finColumna, $inicioFila, $finFila) {
         grid-column-start: $inicioColumna;
@@ -508,7 +780,7 @@ form {
         grid-row-start: $inicioFila;
         grid-row-end: $finFila;
     }
-    
+
     /*---------index---------*/
     main .index {
         margin: 0px 30px 0px 30px;
@@ -520,14 +792,17 @@ form {
         margin-top: 10px;
         margin-bottom: 5px;
     }
-    #carouselExampleIndicators{ 
+
+    #carouselExampleIndicators {
         height: auto;
         width: 60%;
         margin-left: auto;
         margin-right: auto;
     }
+
     .carousel-item {
         height: auto;
+
         .d-block {
             height: 500px;
             width: 100%;
@@ -548,6 +823,7 @@ form {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         gap: 5px;
+
         .imgMarcas {
             height: 200px;
             width: 100%;
@@ -563,6 +839,7 @@ form {
         margin-top: 10px;
         justify-content: center;
         background-color: rgb(231, 236, 235);
+
         .textoreseñas {
             padding: 15px 15px 15px 15px;
         }
@@ -570,11 +847,14 @@ form {
 
     /*------------galeria----------*/
     .margenDesktop {
-        margin: 0 30px 0 30px;;
+        margin: 0 30px 0 30px;
+        ;
     }
+
     .imagenes {
         .galeria {
             grid-template-columns: 1fr 1fr 1fr;
+
             .trabajos {
                 height: 450px;
                 width: 100%;
@@ -585,9 +865,11 @@ form {
     /*------------NOSOTROS---------*/
     .nosotros1 {
         grid-template-columns: 1fr 1fr;
+
         .imgnosotros {
             @include grid (1, 2, 1, 2);
         }
+
         .contenido {
             @include grid (2, 3, 1, 2);
         }
@@ -596,27 +878,33 @@ form {
     .galeriainstalaciones {
         grid-template-columns: 1fr 1fr 1fr 1fr;
         gap: 15px;
+
         .inst1 {
             @include grid (1, 2, 1, 2);
         }
+
         .inst2 {
             @include grid (2, 3, 1, 2);
         }
+
         .inst3 {
             @include grid (3, 4, 1, 2);
         }
+
         .inst4 {
             @include grid (4, 5, 1, 2);
         }
     }
 
     /*-----------servicios----------*/
-    .bloqueserv{
+    .bloqueserv {
         @extend .margenDesktop;
     }
+
     .servicios {
         display: flex;
         flex-direction: row;
+
         .imgservicios {
             height: 300px;
             width: 450px;
@@ -624,6 +912,7 @@ form {
             margin-bottom: 15px;
             object-fit: contain;
         }
+
         .textoserv {
             padding: 30px 30px 30px 30px;
         }
@@ -644,36 +933,43 @@ form {
         margin-bottom: 100px;
         margin-top: 50px;
         border: solid 3px rgb(29, 27, 27);
+
         .nombre {
             grid-column: 1/2;
             grid-row: 1/2;
             justify-self: end;
         }
+
         .apellido {
             grid-column: 2/3;
             grid-row: 1/2;
             justify-self: start;
         }
+
         .mail {
             grid-column: 1/2;
             grid-row: 2/3;
             justify-self: end;
         }
+
         .telefono {
             grid-column: 2/3;
             grid-row: 2/3;
             justify-self: start;
         }
+
         .mensaje {
             grid-column: 1/3;
             grid-row: 3/4;
             height: 150px;
         }
+
         .enviar {
             grid-column: 1/3;
             grid-row: 4/5;
             width: 30%;
         }
+
         textarea {
             resize: none;
             width: 510px;
@@ -681,6 +977,7 @@ form {
             font-size: 16px;
             font-family: 'Times New Roman', Times, serif;
         }
+
         input {
             height: 40px;
             width: 250px;
@@ -689,5 +986,5 @@ form {
             font-size: 16px;
             font-family: 'Times New Roman', Times, serif;
         }
-    }  
+    }
 }
