--- a/estilo.css
+++ b/estilo.css
@@ -11,12 +11,8 @@ body {
   margin: 0px 0px 0px 0px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: #d0d0d0;
-  background: #000000;
-  /* fallback for old browsers */
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-gradient(linear, left bottom, left top, from(#999999), to(#000000));
-  background: linear-gradient(to top, #999999, #000000);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #710075;
+  background: radial-gradient(circle, #710075 0%, black 50%);
 }
 
 body main {
@@ -59,10 +55,27 @@ body header div img {
 
 #navegacion {
   color: #d0d0d0;
+  margin: 5px 10px 5px 10px;
 }
 
-#navegacion:hover {
-  color: #696969;
+.navbar-nav li {
+  position: relative;
+}
+
+.navbar-nav li::before {
+  content: "";
+  height: 3px;
+  width: 0%;
+  background: purple;
+  position: absolute;
+  left: 18px;
+  bottom: 7px;
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+}
+
+.navbar-nav li:hover::before {
+  width: 70%;
 }
 
 .navbar {
@@ -451,11 +464,14 @@ footer .mapa {
 
 .derechos {
   text-align: center;
+  -webkit-text-decoration: overline black;
+          text-decoration: overline black;
   background-color: dimgrey;
   font-size: 16px;
   font-style: italic;
   padding-bottom: 5px;
   margin-bottom: 0;
+  color: #000000;
 }
 
 /*-----------index------------*/
@@ -525,39 +541,37 @@ footer .mapa {
 }
 
 .contenedorReseñas {
-  height: 250px;
+  height: auto;
   width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.contenedorReseñas .reseñas {
-  height: 220px;
-  width: 90%;
+.contenedorReseñas .video iframe {
+  padding-top: 15px;
+  height: 250px;
+  width: 360px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 10px;
-  margin-bottom: 30px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: #d2d6d5;
-  border-radius: 15px 15px 15px 15px;
 }
 
-.contenedorReseñas .reseñas .tituloReseñas {
-  padding-top: 5px;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 24px;
-  color: black;
+#reseñas {
+  height: 250px;
+  width: 90%;
+  margin-bottom: 15px;
 }
 
-.contenedorReseñas .reseñas .textoreseñas {
-  width: 100%;
-  text-align: center;
-  padding: 15px 15px 15px 15px;
-  font-style: italic;
-  overflow-wrap: break-word;
-  color: black;
+#reseñas #client-testimonial-carousel {
+  margin-left: 0;
+  margin-right: 0;
+  height: auto;
+  width: auto;
 }
 
 /*-------------TRABAJOS-----------*/
@@ -575,19 +589,7 @@ footer .mapa {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  -webkit-box-shadow: 5px black;
-          box-shadow: 5px black;
-  margin-bottom: 10px;
-  border: solid 2px black;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-.galeria .trabajos:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  margin-bottom: 20px;
 }
 
 /*--------------NOSOTROS-----------*/
@@ -605,6 +607,7 @@ footer .mapa {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
+  margin: 0;
 }
 
 .nosotros1 .imgnosotros img {
@@ -629,8 +632,8 @@ footer .mapa {
   display: grid;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-  gap: 10px;
-  margin: 30px 0px 30px 0px;
+  gap: 20px;
+  margin: 30px 5px 30px 5px;
   height: 100%;
 }
 
@@ -726,27 +729,31 @@ form {
           align-items: center;
 }
 
-form input {
-  height: 40px;
-  width: 95%;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  font-size: 16px;
-  font-family: 'Times New Roman', Times, serif;
-}
-
-form input .enviar {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
 form textarea {
+  border-radius: 15px;
   resize: none;
   width: 95%;
   height: 90%;
   margin-top: 5px;
   font-size: 16px;
   font-family: 'Times New Roman', Times, serif;
+}
+
+form input {
+  height: 40px;
+  width: 95%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 10px;
+  font-size: 16px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+#enviar {
+  border-radius: 10px;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*---------------MEDIA-------------*/
@@ -764,8 +771,8 @@ form textarea {
     padding-right: 5px;
   }
   .carousel-item .d-block {
-    height: 400px;
-    width: 100%;
+    height: auto;
+    width: auto;
     -o-object-fit: contain;
        object-fit: contain;
     padding-top: 10px;
@@ -789,17 +796,30 @@ form textarea {
         justify-self: center;
   }
   .contenedorReseñas {
-    margin-left: auto;
-    margin-right: auto;
-    width: 500px;
+    height: 350px;
+    width: 100%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
-  .contenedorReseñas .textoreseñas {
+  .contenedorReseñas .video iframe {
+    height: 250px;
+    width: 380px;
+  }
+  #reseñas {
+    height: 220px;
+    width: 380px;
+  }
+  #reseñas #client-testimonial-carousel {
+    margin-left: 0;
+    margin-right: 0;
     height: auto;
     width: auto;
-    margin: 0 auto;
-    font-style: italic;
-    overflow-wrap: break-word;
-    text-align: center;
   }
   /*------------galeria----------*/
   .margenTablet, .nosotros1, .galeriainstalaciones, .servicios {
@@ -809,12 +829,22 @@ form textarea {
   .imagenes .galeria {
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-    -webkit-column-gap: 10px;
-            column-gap: 10px;
+    -webkit-column-gap: 15px;
+            column-gap: 15px;
+    padding-top: 10px;
   }
   .imagenes .galeria .trabajos {
+    border: solid 2px black;
     height: 350px;
     width: 100%;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+  .imagenes .galeria .trabajos:hover {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
   }
   /*--------------NOSOTROS---------*/
   .nosotros1 {
@@ -903,19 +933,19 @@ form textarea {
     display: grid;
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 0.1fr 0.1fr 0.5fr 0.1fr;
-        grid-template-rows: 0.1fr 0.1fr 0.5fr 0.1fr;
-    padding-left: 5px;
-    padding-right: 5px;
-    height: 550px;
+    -ms-grid-rows: 0.2fr 0.2fr 0.5fr 0.2fr;
+        grid-template-rows: 0.2fr 0.2fr 0.5fr 0.2fr;
+    gap: 5px;
+    height: 500px;
     width: 80%;
+    text-align: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px;
-    justify-items: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    margin-bottom: 100px;
+    margin-top: 50px;
+    border: solid 3px #1d1b1b;
   }
   form .nombre {
     -ms-grid-column: 1;
@@ -957,7 +987,7 @@ form textarea {
         grid-row-start: 3;
     grid-row-end: 4;
   }
-  form .enviar {
+  form #enviar {
     -ms-grid-column: 1;
         grid-column-start: 1;
     grid-column-end: 3;
@@ -995,7 +1025,7 @@ form textarea {
   }
   #carouselExampleIndicators {
     height: auto;
-    width: 60%;
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1003,8 +1033,8 @@ form textarea {
     height: auto;
   }
   .carousel-item .d-block {
-    height: 500px;
-    width: 100%;
+    height: auto;
+    width: 550px;
     -o-object-fit: contain;
        object-fit: contain;
     padding-top: 10px;
@@ -1022,6 +1052,7 @@ form textarea {
     -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap: 5px;
+    padding-top: 10px;
   }
   .marcas .imgMarcas {
     height: 200px;
@@ -1029,30 +1060,43 @@ form textarea {
     -o-object-fit: contain;
        object-fit: contain;
   }
-  .reseñas {
-    height: 250px;
-    width: 550px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    background-color: #e7eceb;
+  .contenedorReseñas {
+    height: 350px;
+    width: 100%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 10px;
   }
-  .reseñas .textoreseñas {
-    padding: 15px 15px 15px 15px;
+  .contenedorReseñas .video iframe {
+    height: 260px;
+    width: 480px;
+  }
+  #reseñas {
+    height: 250px;
+    width: 480px;
+  }
+  #reseñas #client-testimonial-carousel {
+    margin-left: 0;
+    margin-right: 0;
+    height: 200px;
+    width: auto;
   }
   /*------------galeria----------*/
   .margenDesktop, .bloqueserv {
-    margin: 0 30px 0 30px;
+    margin: 0 60px 0 60px;
   }
   .imagenes .galeria {
     -ms-grid-columns: 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr 1fr;
   }
   .imagenes .galeria .trabajos {
-    height: 450px;
+    height: 430px;
     width: 100%;
   }
   /*------------NOSOTROS---------*/
@@ -1201,7 +1245,7 @@ form textarea {
     grid-row: 3/4;
     height: 150px;
   }
-  form .enviar {
+  form #enviar {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1/3;
