--- a/estilo.scss
+++ b/estilo.scss
@@ -21,13 +21,8 @@ body {
     margin: 0px 0px 0px 0px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: $colorletra1;
-    background: #000000;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, rgb(153, 153, 153), #000000);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, rgb(153, 153, 153), #000000);
-
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: rgb(113, 0, 117);
+    background: radial-gradient(circle, rgba(113, 0, 117,1) 0%, rgb(0, 0, 0) 50%);
 
     main {
         border-top: solid 8px rgb(113, 0, 117);
@@ -58,10 +53,22 @@ body {
 
 #navegacion {
     color: $colorletra1;
-
-    &:hover {
-        color: #696969;
-
+    margin: 5px 10px 5px 10px;
+}
+.navbar-nav li  {
+    position: relative;
+    &::before{
+        content: "";
+        height: 3px;
+        width: 0%;
+        background: purple;
+        position: absolute;
+        left: 18px;
+        bottom: 7px;
+        transition: 0.3s ease-out;
+    }
+    &:hover::before{
+        width: 70%;
     }
 }
 
@@ -331,11 +338,13 @@ footer {
 
 .derechos {
     text-align: center;
+    text-decoration: overline black;
     background-color: dimgrey;
     font-size: map-get($map: $tamañodefuente, $key: "small");
     font-style: italic;
     padding-bottom: 5px;
     margin-bottom: 0;
+    color: #000000;
 }
 
 /*-----------index------------*/
@@ -403,41 +412,32 @@ footer {
         }
     }
 }
-
-.contenedorReseñas {
-    height: 250px;
+.contenedorReseñas{
+    height: auto;
     width: 100%;
-
-    .reseñas {
-        height: 220px;
-        width: 90%;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    align-items: center;
+    .video iframe{
+        padding-top: 15px;
+        height: 250px;
+        width: 360px;
         margin-left: auto;
         margin-right: auto;
-        margin-top: 10px;
-        margin-bottom: 30px;
-        justify-content: center;
-        background-color: rgb(210, 214, 213);
-        border-radius: 15px 15px 15px 15px;
-
-        .tituloReseñas {
-            padding-top: 5px;
-            text-align: center;
-            text-transform: uppercase;
-            font-size: map-get($map: $tamañodefuente, $key: "medium");
-            color: black;
-        }
-
-        .textoreseñas {
-            width: 100%;
-            text-align: center;
-            padding: 15px 15px 15px 15px;
-            font-style: italic;
-            overflow-wrap: break-word;
-            color: black;
-        }
     }
 }
-
+#reseñas{
+    height: 250px;
+    width: 90%;
+    margin-bottom: 15px;
+    #client-testimonial-carousel {
+    margin-left: 0;
+    margin-right: 0;
+    height: auto;
+    width: auto;
+    }
+}
 /*-------------TRABAJOS-----------*/
 
 .galeria {
@@ -450,15 +450,9 @@ footer {
         height: 350px;
         width: 100%;
         object-fit: cover;
-        box-shadow: 5px black;
-        margin-bottom: 10px;
-        border: solid 2px black;
-        transition: all 0.5s;
-
-        &:hover {
-            transform: scale(1.1);
-            transition: 0.5s;
-        }
+       // box-shadow: 5px black;
+        margin-bottom: 20px;
+       // 
     }
 }
 
@@ -470,6 +464,7 @@ footer {
     .imgnosotros {
         grid-column: 1/2;
         grid-row: 1/2;
+        margin: 0;
 
         img {
             height: 300px;
@@ -492,8 +487,8 @@ footer {
 .galeriainstalaciones {
     display: grid;
     grid-template-columns: 100%;
-    gap: 10px;
-    margin: 30px 0px 30px 0px;
+    gap: 20px;
+    margin: 30px 5px 30px 5px;
     height: 100%;
 
     .inst1 {
@@ -564,29 +559,31 @@ form {
     margin-bottom: 10px;
     justify-items: center;
     align-items: center;
+    textarea {
+        border-radius: 15px;
+        resize: none;
+        width: 95%;
+        height: 90%;
+        margin-top: 5px;
+        font-size: map-get($map: $tamañodefuente, $key: "small");
+        font-family: 'Times New Roman', Times, serif; 
+    }
 
     input {
         height: 40px;
         width: 95%;
         margin-top: 5px;
         margin-bottom: 5px;
-        font-size: map-get($map: $tamañodefuente, $key: "small");
-        font-family: 'Times New Roman', Times, serif;
-
-        .enviar {
-            padding-left: 30px;
-            padding-right: 30px;
-        }
-    }
-
-    textarea {
-        resize: none;
-        width: 95%;
-        height: 90%;
-        margin-top: 5px;
+        border-radius: 10px;
         font-size: map-get($map: $tamañodefuente, $key: "small");
         font-family: 'Times New Roman', Times, serif;
     }
+}
+#enviar {
+    border-radius: 10px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /*---------------MEDIA-------------*/
@@ -607,8 +604,8 @@ form {
         padding-right: 5px;
 
         .d-block {
-            height: 400px;
-            width: 100%;
+            height: auto;
+            width: auto;
             object-fit: contain;
             padding-top: 10px;
         }
@@ -633,21 +630,28 @@ form {
         }
     }
 
-    .contenedorReseñas {
-        margin-left: auto;
-        margin-right: auto;
-        width: 500px;
-
-        .textoreseñas {
-            height: auto;
-            width: auto;
-            margin: 0 auto;
-            font-style: italic;
-            overflow-wrap: break-word;
-            text-align: center;
+    .contenedorReseñas{
+        height: 350px;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+        .video iframe{
+            height: 250px;
+            width: 380px;
         }
     }
-
+    #reseñas{
+        height: 220px;
+        width: 380px;
+        #client-testimonial-carousel {
+        margin-left: 0;
+        margin-right: 0;
+        height: auto;
+        width: auto;
+        }
+    }
     /*------------galeria----------*/
     .margenTablet {
         margin-left: 25px;
@@ -657,15 +661,20 @@ form {
     .imagenes {
         .galeria {
             grid-template-columns: 1fr 1fr;
-            column-gap: 10px;
-
+            column-gap: 15px;
+            padding-top: 10px;
             .trabajos {
+                border: solid 2px black;
                 height: 350px;
                 width: 100%;
+                transition: all 0.5s;
+                &:hover {
+                        transform: scale(1.1);
+                        transition: 0.3s;
             }
         }
     }
-
+}
     /*--------------NOSOTROS---------*/
 
     @mixin grid ($inicioColumna, $finColumna, $inicioFila, $finFila) {
@@ -742,16 +751,18 @@ form {
     form {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 0.1fr 0.1fr 0.5fr 0.1fr;
-        padding-left: 5px;
-        padding-right: 5px;
-        height: 550px;
+        grid-template-rows: 0.2fr 0.2fr 0.5fr 0.2fr;
+        gap: 5px;
+        height: 500px;
         width: 80%;
+        text-align: center;
+        padding-top: 40px;
+        padding-bottom: 40px;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: 20px;
-        justify-items: center;
-        align-items: center;
+        margin-bottom: 100px;
+        margin-top: 50px;
+        border: solid 3px rgb(29, 27, 27);
 
         .nombre {
             @include grid (1, 2, 1, 2);
@@ -773,7 +784,7 @@ form {
             @include grid (1, 3, 3, 4);
         }
 
-        .enviar {
+        #enviar {
             @include grid (1, 3, 4, 5);
             width: 30%;
         }
@@ -818,7 +829,7 @@ form {
 
     #carouselExampleIndicators {
         height: auto;
-        width: 60%;
+        width: 50%;
         margin-left: auto;
         margin-right: auto;
     }
@@ -827,8 +838,8 @@ form {
         height: auto;
 
         .d-block {
-            height: 500px;
-            width: 100%;
+            height: auto;
+            width: 550px;
             object-fit: contain;
             padding-top: 10px;
         }
@@ -846,6 +857,7 @@ form {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         gap: 5px;
+        padding-top: 10px;
 
         .imgMarcas {
             height: 200px;
@@ -853,24 +865,34 @@ form {
             object-fit: contain;
         }
     }
-
-    .reseñas {
-        height: 250px;
-        width: 550px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 10px;
-        justify-content: center;
-        background-color: rgb(231, 236, 235);
-
-        .textoreseñas {
-            padding: 15px 15px 15px 15px;
+    .contenedorReseñas{
+        height: 350px;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+        gap: 10px;
+        .video iframe{
+            height: 260px;
+            width: 480px;
         }
+        }
+
+    #reseñas{
+        height: 250px;
+        width: 480px;
+        #client-testimonial-carousel {
+        margin-left: 0;
+        margin-right: 0;
+        height: 200px;
+        width: auto;
+       }
     }
 
     /*------------galeria----------*/
     .margenDesktop {
-        margin: 0 30px 0 30px;
+        margin: 0 60px 0 60px;
         ;
     }
 
@@ -879,7 +901,7 @@ form {
             grid-template-columns: 1fr 1fr 1fr;
 
             .trabajos {
-                height: 450px;
+                height: 430px;
                 width: 100%;
             }
         }
@@ -987,7 +1009,7 @@ form {
             height: 150px;
         }
 
-        .enviar {
+        #enviar {
             grid-column: 1/3;
             grid-row: 4/5;
             width: 30%;
@@ -1009,5 +1031,6 @@ form {
             font-size: 16px;
             font-family: 'Times New Roman', Times, serif;
         }
+        
     }
 }
